responsiveness of element and plean locations section

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </head>
     <body>
         <!-- HEADER -->
-        <header class="w-full max-w-[1440px] h-[72px] px-4 md:px-10 flex justify-center items-center bg-white sticky top-0 z-50 shadow">
-            <div class="w-full max-w-[1312px] flex justify-between items-center">
+        <header class="w-full h-[72px] px-4 md:px-10 flex justify-center items-center bg-white sticky top-0 z-50 shadow">
+            <div class="w-full  flex justify-between items-center">
                 <!-- Logo + Navigation -->
                 <div class="flex items-center gap-6">
                     <!-- Logo -->
@@ -70,7 +70,7 @@
         </header>
         <!-- HERO SECTION -->
         <section 
-        class="relative w-full max-w-[1440px] h-screen bg-cover bg-center bg-no-repeat flex items-center"
+        class="relative w-full h-screen bg-cover bg-center bg-no-repeat flex items-center"
         style="background-image: url('./img/heroSection.jpg');"
         >
             <!-- Dark Overlay -->       
@@ -116,7 +116,30 @@
             </div>
 
         </section>
-        
+        <!--LOCATIONS SECTION-->
+        <section class="location_section px-4 py-12">
+            <div class="location_container">
+                <div class="location_headers flex flex-col justify-center items-center gap-5 md:gap-6">
+                    <h2 class="text-2xl font-bold leading-tight font-roboto">Workspace Showcase</h2>
+                    <p class="text-center font-roboto">Explore our vibrant coworking spaces designed for creativity.</p>
+                </div>
+                <div class="location_content">
+                    
+                </div>
+            </div>
+        </section>
+        <!--ABOUT SECTION-->
+        <section class="about_section md:flex md:flex-col md:justify-center md:items-center">
+            <div class="about_container py-12">
+                <div class="centent px-3 md:w-[768px]">
+                    <h2 class="text-2xl font-bold leading-tight text-center font-roboto mb-6">Discover Workly: Your Ideal Coworking Space in Casablanca</h2>
+                    <p class="text-center font-roboto">
+                        At Workly, we empower freelancers and startups by providing a collaborative environment designed for productivity and creativity. 
+                        Our mission is to foster innovation and connection among professionals, ensuring that everyone feels inspired and supported.
+                    </p>
+                </div>
+            </div>
+        </section>
         <!--FOOTER-->
         <footer class="w-full bg-white px-4 py-6 flex justify-center items-center">
             <div class="w-full max-w-[1280px] flex flex-col gap-10 md:gap-20">
@@ -136,8 +159,8 @@
                     </ul>
                     <!-- Social Icons -->
                     <ul class="flex justify-center md:justify-end gap-3 text-xl">
-                        <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-facebook "></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-instagram "></i></a></li>
                         <li><a href=""><i class="fa-brands fa-x-twitter"></i></a></li>
                         <li><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
                         <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
