fixing the burger menu probleme navlinks and creation pop form

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <!--Splide library-->
     <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css" rel="stylesheet">
 
+    <!--daisyUI use in for the botton in form-->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <style>
       .font-roboto {
         font-family: "Roboto", sans-serif;
@@ -39,7 +42,7 @@
 
     <!-- HEADER -->
     <header 
-      class="w-full h-[72px] px-4 md:px-10 flex justify-center items-center bg-white sticky top-0 z-50 shadow"
+      class="w-full h-[72px] px-4 md:px-10 flex justify-center items-center bg-white sticky top-0 z-1000 shadow"
     >
       <div class="w-full flex justify-between items-center">
         <!-- Logo + Navigation -->
@@ -125,7 +128,7 @@
       <!-- Dark Overlay -->
       <div class="absolute inset-0 bg-black opacity-60"></div>
       <!-- Hero Content -->
-      <div class="relative z-10 max-w-4xl px-6 md:px-12 text-white">
+      <div class="relative max-w-4xl px-6 md:px-12 text-white">
         <h1 class="text-4xl md:text-5xl font-bold leading-tight max-w-xl">
           Discover Your Ideal <br />
           Coworking Space Today
@@ -136,6 +139,7 @@
           Casablanca.
         </p>
         <button
+          data-modal-target="#module"
           class="mt-8 px-6 py-2 bg-white text-black font-semibold rounded hover:bg-gray-200 transition"
         >
           Book a section
@@ -146,25 +150,92 @@
 
 
     <!--POP OUT SECTION "module"-->
+    <div
+      id="module"
+      class="module fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 z-[99999] scale-0 transition duration-300 ease-in-out
+            w-full max-w-md sm:max-w-xl p-4"
+    >
+      <div class="border bg-white px-4 py-6 rounded-xl shadow-lg w-full">
+        <!-- Header -->
+        <div class="flex justify-between items-center mb-6">
+          <h2 class="text-xl font-semibold">Reservation Form</h2>
+          <button
+            data-close-button
+            class="text-gray-500 hover:text-red-600 text-2xl leading-none"
+            aria-label="Close modal"
+          >
+            &times;
+          </button>
+        </div>
 
-    <div class="modul">
-      <div class="modul-header"></div>
-      <div class="module_form">
-        <label for="FName">First Name : </label>
-        <input type="text" name="FName" placeholder="First Name">
-        <label for="LName">Last Name : </label>
-        <input type="text" name="LName" placeholder="Last Name">
-        <label for="email">Email : </label>
-        <input type="email" name="email" placeholder="email@gmail.com">
-        <label for="tele">Phone Number : </label>
-        <input type="number" name="tele" placeholder="06********">
-        <label for="dateDebut"> </label>
-        <input type="date" name="dateDebut">
-        <input type="date" name="dateFin">
-        <button type="submit">Submit</button>
-        <button type="reset">Reset</button>
+        <!-- Form Grid -->
+        <form class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+          <!-- First & Last Name -->
+          <input
+            type="text"
+            placeholder="First Name"
+            class="input input-bordered w-full"
+          />
+          <input
+            type="text"
+            placeholder="Last Name"
+            class="input input-bordered w-full"
+          />
+
+          <!-- Email -->
+          <label class="form-control sm:col-span-2">
+            <span class="label-text mb-1">Email</span>
+            <input
+              type="email"
+              placeholder="mail@site.com"
+              class="input input-bordered w-full"
+            />
+          </label>
+
+          <!-- Phone Number -->
+          <label class="form-control sm:col-span-2">
+            <span class="label-text mb-1">Phone Number</span>
+            <input
+              type="number"
+              placeholder="06********"
+              class="input input-bordered w-full no-spinner"
+            />
+          </label>
+
+          <!-- Dates -->
+          <label class="form-control">
+            <span class="label-text mb-1">Start Date</span>
+            <input type="date" class="input input-bordered w-full" />
+          </label>
+          <label class="form-control">
+            <span class="label-text mb-1">End Date</span>
+            <input type="date" class="input input-bordered w-full" />
+          </label>
+
+          <!-- Buttons -->
+          <div class="sm:col-span-2 flex justify-center gap-4 mt-4">
+            <button
+              type="reset"
+              class="btn btn-outline btn-neutral px-6 py-2 rounded"
+            >
+              Reset
+            </button>
+            <button
+              type="submit"
+              class="btn btn-outline btn-neutral px-6 py-2 rounded"
+            >
+              Submit
+            </button>
+          </div>
+        </form>
       </div>
     </div>
+
+    <div
+      id="overlay"
+      class="fixed inset-0 bg-[rgba(0,0,0,0.5)]  opacity-0 pointer-events-none transition-opacity duration-300 z-100"
+    ></div>
+
 
     <!--END POP OUT SECTION-->
 
@@ -247,43 +318,43 @@
     </section>
     <!--END LOCATIONS SECTION-->
 
-    <!-- Subscription Pricing Section -->
-    <section id="pricing"
-      class="flex flex-col items-center justify-center bg-white text-black py-12 px-4"
-    >
-      <!-- Header -->
-      <div class="text-center max-w-4xl mx-auto py-4">
-        <h2 class="text-3xl md:text-5xl font-bold text-black">
-          Pricing Plans
-        </h2>
-        <p class="mt-4 text-xs md:text-lg text-gray-600">
-          Choose the perfect plan for your needs today!
-        </p>
-      </div>
+      <!-- Subscription Pricing Section -->
+      <section id="pricing"
+        class="flex flex-col items-center justify-center bg-white text-black py-12 px-4"
+      >
+        <!-- Header -->
+        <div class="text-center max-w-4xl mx-auto py-4">
+          <h2 class="text-3xl md:text-5xl font-bold text-black">
+            Pricing Plans
+          </h2>
+          <p class="mt-4 text-xs md:text-lg text-gray-600">
+            Choose the perfect plan for your needs today!
+          </p>
+        </div>
 
-      <!-- Tabs -->
-      <div class="flex gap-4 mt-6 mb-10 border p-0.5">
-        <button
-          class="tab-btn px-4 py-2 border text-black"
-          data-tab="Monthly"
-        >
-          Monthly
-        </button>
-        <button
-          class="tab-btn px-4 py-2 text-black "
-          data-tab="Annual"
-        >
-          Annual
-        </button>
-      </div>
+        <!-- Tabs -->
+        <div class="flex gap-4 mt-6 mb-10 border p-0.5">
+          <button
+            class="tab-btn px-4 py-2 border text-black"
+            data-tab="Monthly"
+          >
+            Monthly
+          </button>
+          <button
+            class="tab-btn px-4 py-2 text-black "
+            data-tab="Annual"
+          >
+            Annual
+          </button>
+        </div>
 
-      <!-- Pricing Cards -->
-      <div
-        id="cards-container"
-        class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-6xl w-full"
-      ></div>
-    </section>
-    <!-- END Subscription Pricing Section -->
+        <!-- Pricing Cards -->
+        <div
+          id="cards-container"
+          class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-6xl w-full"
+        ></div>
+      </section>
+      <!-- END Subscription Pricing Section -->
 
         <!--ABOUT SECTION-->
     <section id="about"
