--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
 
         <!-- Form Grid -->
-        <form class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+        <form id="contact-form" class="grid grid-cols-1 sm:grid-cols-2 gap-4">
           <!-- First & Last Name -->
           <input
             type="text"
@@ -453,6 +453,10 @@
     <script>
       AOS.init();
     </script>
+
+    <!--Email Js-->
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+
     <!--Main JS file-->
     <script src="script.js"></script>
   </body>
