--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!--Splide library-->
     <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css" rel="stylesheet">
 
-    <!--daisyUI use in for the botton in form-->
+    <!--daisyUI use for the botton in form-->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <style>
@@ -42,7 +42,7 @@
 
     <!-- HEADER -->
     <header 
-      class="w-full h-[72px] px-4 md:px-10 flex justify-center items-center bg-white sticky top-0 z-1000 shadow"
+      class="w-full h-[72px] px-4 md:px-10 flex justify-center items-center bg-white sticky top-0 z-100 shadow"
     >
       <div class="w-full flex justify-between items-center">
         <!-- Logo + Navigation -->
@@ -69,10 +69,10 @@
         </div>
         <!-- Actions (Desktop) -->
         <div class="hidden md:flex gap-2">
-          <button class="w-[95px] h-9 border border-black text-black">
+          <button id="signupBtn" class="w-[95px] h-9 border border-black text-black cursor-pointer ">
             Sign Up
           </button>
-          <button class="w-[95px] h-9 bg-black text-white">Login</button>
+          <button id="loginBtn" class="w-[95px] h-9 border bg-black text-white cursor-pointer">Login</button>
         </div>
         <!-- Burger Menu (Mobile) -->
         <div class="md:hidden">
@@ -108,10 +108,10 @@
           <li><a href="#about">About Us</a></li>
           <li><a href="#">Contact</a></li>
           <div class="flex flex-col gap-2 mt-4">
-            <button class="w-full h-9 border border-black text-black">
+            <button id="signupBtnMobile" class="w-full h-9 border border-black text-black">
               Sign Up
             </button>
-            <button class="w-full h-9 bg-black text-white">Login</button>
+            <button id="loginBtnMobile" class="w-full h-9 border bg-black text-white">Login</button>
           </div>
         </ul>
       </div>
@@ -121,14 +121,20 @@
 
 
     <!-- HERO SECTION -->
-    <section id="home"
+    <section id="home" 
       class="relative w-full h-screen bg-cover bg-center bg-no-repeat flex items-center"
       style="background-image: url('./img/heroSection.jpg')"
     >
       <!-- Dark Overlay -->
       <div class="absolute inset-0 bg-black opacity-60"></div>
       <!-- Hero Content -->
-      <div class="relative max-w-4xl px-6 md:px-12 text-white">
+      <div 
+          data-aos="fade-right"
+          data-aos-offset="300"
+          data-aos-easing="ease-in-sine"
+          data-aos-duration="1000" 
+          class="relative max-w-4xl px-6 md:px-12 text-white"
+      >
         <h1 class="text-4xl md:text-5xl font-bold leading-tight max-w-xl">
           Discover Your Ideal <br />
           Coworking Space Today
@@ -152,7 +158,7 @@
     <!--POP OUT SECTION "module"-->
     <div
       id="module"
-      class="module fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 z-[99999] scale-0 transition duration-300 ease-in-out
+      class="module fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 z-2000 scale-0 transition duration-300 ease-in-out
             w-full max-w-md sm:max-w-xl p-4"
     >
       <div class="border bg-white px-4 py-6 rounded-xl shadow-lg w-full">
@@ -160,8 +166,9 @@
         <div class="flex justify-between items-center mb-6">
           <h2 class="text-xl font-semibold">Reservation Form</h2>
           <button
+            id="closeModal"
             data-close-button
-            class="text-gray-500 hover:text-red-600 text-2xl leading-none"
+            class="text-gray-500 hover:text-red-600 text-2xl leading-none cursor-pointer"
             aria-label="Close modal"
           >
             &times;
@@ -233,7 +240,7 @@
 
     <div
       id="overlay"
-      class="fixed inset-0 bg-[rgba(0,0,0,0.5)]  opacity-0 pointer-events-none transition-opacity duration-300 z-100"
+      class="fixed inset-0 bg-[rgba(0,0,0,0.5)]  opacity-0 pointer-events-none transition-opacity duration-300 z-200"
     ></div>
 
 
@@ -241,7 +248,7 @@
 
 
     <!--SERVICE SECTION-->
-    <section id="service" class="service bg-white flex justify-center items-center px-4 py-12">
+    <section id="service" data-aos="zoom-in" data-aos-duration="1000" class="service bg-white flex justify-center items-center px-4 py-12">
       <div class="service_contaire flex flex-col gap-8 md:gap-20">
         <div class="service_headres max-w-[768px]">
           <h2
@@ -293,7 +300,7 @@
     <!--LOCATIONS SECTION-->
     <section id="locations" class="location_section px-5 py-14 md:px-16 md:py-14">
       <div class="location_container flex flex-col gap-12 md:gap-20">
-        <div
+        <div 
           class="location_headers flex flex-col justify-center items-center gap-5 md:gap-6"
         >
           <h2 class="text-2xl font-bold leading-tight font-roboto">
@@ -308,10 +315,10 @@
       <div class="splide px-4 py-12" aria-label="Splide Basic HTML Example">
       <div class="splide__track">
         <ul class="splide__list flex gap-2.5">
-          <li class="splide__slide"><img class="w-full h-full" src="./img/space1.jpeg" alt=""></li>
-          <li class="splide__slide"><img class="w-full h-full bg-origin-content" src="./img/space2.jpeg" alt=""></li>
-          <li class="splide__slide"><img class="w-full h-full bg-origin-content" src="./img/space3.jpeg" alt=""></li>
-          <li class="splide__slide"><img class="w-full h-full bg-origin-contain" src="./img/space4.png" alt=""></li>
+          <li class="splide__slide"><img class="w-full h-full " src="./img/space1.jpeg" alt=""></li>
+          <li class="splide__slide"><img class="w-full h-full " src="./img/space2.jpeg" alt=""></li>
+          <li class="splide__slide"><img class="w-full h-full " src="./img/space3.jpeg" alt=""></li>
+          <li class="splide__slide"><img class="w-full h-full " src="./img/space4.png" alt=""></li>
         </ul>
       </div>
     </div>
@@ -455,7 +462,9 @@
     </script>
 
     <!--Email Js-->
-    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script> 
 
     <!--Main JS file-->
     <script src="script.js"></script>
